--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PUBLIC_URL=http://localhost:3000
+PUBLIC_URL=https://reggie-ai.vercel.app
 REACT_APP_API_URL=https://regy-api.azurewebsites.net
 REACT_APP_GOOGLE_KEY=949279635330-6sdptkqj6gefq3uos9mphhfd7d6l0v51.apps.googleusercontent.com
 REACT_APP_JWT_TOKEN='Basic cmVneV9haTp0ZTV0UGFzJHcwMGQ='
