--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
+    "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
@@ -27,7 +28,8 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.58.3",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
